# agendamento

./: .gitignore  build.sh  create_admin.py  fix_alembic.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
agendamento/: app.py  database.py  models.py  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 13765f1c46ca_create_users_table.py  20260322_sync_models.py  20260323_add_ondelete_cascade.py  20260323_non_destructive_sync.py
tests/: conftest.py  test_app.py  test_db.py
